--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,11 +1,10 @@
 @import "tailwindcss";
-.hide-scrollbar::-webkit-scrollbar {
+/* Hide scrollbar */
+.no-scrollbar::-webkit-scrollbar {
     display: none;
-}
-
-.hide-scrollbar {
+  }
+  .no-scrollbar {
     -ms-overflow-style: none;
-    /* IE and Edge */
     scrollbar-width: none;
-    /* Firefox */
-}
+  }
+  
